# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  27 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> dispatch-conf: Moved temp file
  creation from /tmp to /var/lib/portage.

  26 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py:  Added a check to
  portdbapi.fetchcheck to account for a missing digest.

  26 Oct 2004; Brian Harring <ferringb@gentoo.org> portage_exec.py, bin/ebuild:
  bug with the path lookup code (added find_binary func for upcoming additions), 
  and bin/ebuild was bailing due to a missing portage_util import.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Wrapped entire
  lock-holding section of fetch() in a try-finally to ensure that the lock
  file gets released regardless of exception.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> etc-update: Added patch
  from #48218 to continue on to next file when answering "no" to the
  interactive replace prompt of menu option -3.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Fixed the space/tab
  usage through the spinner_msgs definition. Removed COMPILER from emerge info
  output.

  25 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py: Converted
  config.pkeywordsdict from {atom:[keyword]} to {cp:{atom:[keyword]}} to
  prevent a lot of unnecessary calculation.

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> emerge: Added a percentage
  counter to the cache update phase based on patch from #68694

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage.py:
  s/macos/ppc-macos/ change.

  24 Oct 2004; Jason Stubbs <jstubbs@gentoo.org> portage_locks.py
  portage_db_flat.py: Fixed a couple of race conditions with regard to
  stating files.
